--- a/index.html
+++ b/index.html
@@ -1,1 +1,256 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Marina N. Sharifi</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="css/m-onepage.min.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</head>
+
+<body id="page-top" class="index">
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand visible-xs-block" href="#page-top">Marina N. Sharifi</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                     <li>
+                        <a class="page-scroll" href="#page-top">Home</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#bio">Bio</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#research">Research</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#publications">Publications</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#cv">CV</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+
+    <!-- Header -->
+    <header>
+        <div class="container">
+            <div class="intro-text">
+                <div class="intro-heading">Marina N. Sharifi
+                </div>
+                <a href="#bio" class="btn btn-circle page-scroll"><i class="fa fa-angle-double-down animated"></i>
+                </a>
+            </div>
+        </div>
+    </header>
+
+    <!-- Bio Section -->
+    <section id="bio">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img class="img-reponsive img-circle" alt="" src="img/headshot.jpg"></img>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <p class="text-muted">I am an MD/PhD student in the <a href="https://pritzker.uchicago.edu/jointdegrees/mstp/">MSTP program</a> at the <a href=http://www.uchicago.edu/>University of Chicago</a>. 
+                    </p>
+                    <p class="text-muted">I did my graduate work in the <a href="http://benmay.uchicago.edu/faculty/macleod">Macleod Lab</a> in the <a href="https://biomedsciences.uchicago.edu/page/cancer-biology">Committee on Cancer Biology</a> and <a href="http://benmay.uchicago.edu/">Ben May Department of Cancer Research</a>, studying the role of autophagy in metastasis.  I received my PhD in March 2013.
+                    </p> 
+                    <p class="text-muted">I graduated from the <a href="http://www.berkeley.edu">University of California, Berkeley</a> in 2006 with BA degrees in Molecular and Cell Biology and German. From 2006 to 2008 I worked as a technician and interim lab manager in the <a href="http://niyogilab.berkeley.edu/frontpage">Niyogi Lab</a> in the <a href="http://pmb.berkeley.edu/">Department of Plant and Microbial Biology</a> at UC Berkeley.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Research Section -->
+    <section id="research" class="bg-light-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Research</h2>
+                    <h3 class="section-subheading text-muted">A bit about my PhD research</h3>
+                </div>
+            </div>
+            <div class="row">
+            	<div class="col-sm-5 text-center">
+            		<h4 class="section-sub-heading">About</h4>
+            		<p>I did my PhD research on the role of macro-autophagy in tumor cell metastasis. Macro-autophagy is a catabolic process important for degradation of damaged organelles, protein aggregates and intracellular recycling of proteins and lipids. Autophagy is thought to suppress tumor initiation by promoting genome stability and limiting necrosis and inflammation, but conversely is utilized by tumor cells to survive nutrient stress, hypoxia, and cytotoxic therapies, promoting growth of established tumors. However, whether autophagy impacts the metastatic process is not well understood, and my research has focused on investigating whether inhibition of autophagy affects the invasiveness, motility, and survival of metastatic tumor cells, as well as their metastatic potential <i>in vivo</i> in a mouse model of breast cancer.</p>
+            	</div>
+            	<div class="col-sm-7 text-center">
+            		<h4 class="section-sub-heading">Selected Conference Presentations</h4>
+            		<div class="publications">
+                	<ul>
+                		<li>
+                			<p>American Association for Cancer Research Annual Meeting San Diego, CA, April 2014: Poster (AACR Scholar-in-Training award recipient). 
+                			</p>	
+                		</li>
+                		<li>
+                			<p>Cancer Biology Training Consortium Annual Meeting, Wilmington, NC, October 2013: Talk.
+                			</p>	
+                		</li>
+                		<li>
+                			<p>Keystone Symposium on Tumor Metabolism, Keystone, CO, February 2013: Poster.
+                			</p>	
+                		</li>
+                		<li>
+                			<p>American Physician Scientist Association/American Society for Clinical Investigation Annual Meeting, Chicago, IL, April 2012: Poster.
+                			</p>
+            			</li>
+            			<li>
+                			<p>Keystone Symposium on Autophagy, Whistler, B.C., March 2011: Poster.
+                			</p>
+            			</li>
+                	</ul>	 
+                </div>
+            	</div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Publications Section -->
+    <section id="publications">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Publications</h2>
+                    <h3 class="section-subheading text-muted">Direct links below, or via <a href="http://www.ncbi.nlm.nih.gov/pubmed/?term=marina+n+sharifi">Pubmed</a></h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="publications">
+                	<ul>
+                		<li>
+                			<p>
+                				<strong>p62/SQSTM1 Accumulation in Squamous Cell Carcinoma Of Head And Neck Predicts Sensitivity to Phosphatidylinositol 3-Kinase Pathway Inhibitors. </strong> Kuo, W., <em>Sharifi, M. N.</em>, Lingen, M., Karrison, T., Nagilla, M., Macleod, K. F. and Cohen, Ezra. PLoS One. 2014 Mar 5;9(3):e90171.
+                				<span class="label label-primary"><a href="http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0090171">Link</a>
+                			</p>	
+                		</li>
+                		<li>
+                			<p>
+                				<strong>Intragenic enhancers and suppressors of phytoene desaturase mutations in Chlamydomonas reinhardtii.</strong> Tran, P. T., <em>Sharifi, M. N.,</em> Poddar, S., Dent, R. M., and Niyogi, K.K.  PLoS One. 2012; Aug 7(8):e42196.
+                				<span class="label label-primary"><a href="http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0042196">Link</a>
+                			</p>	
+                		</li>
+                	</ul>	 
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- CV Section -->
+    <section id="cv" class="bg-light-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Curriculum Vitae</h2>
+                    <h3 class="section-subheading text-muted">You can view and download my curriculum vitae here</h3>
+                    <a href="docs/MarinaSharifiCV.pdf" class="page-scroll btn btn-xl">Download CV</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+	<!-- Contact Section -->
+    <section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Contact</h2>
+                    <h3 class="section-subheading text-muted">Please feel free to contact me via the links below</h3>
+                <ul class="list-inline">
+                	<li>
+                		<a href="mailto:mnsharif@uchicago.edu" class="btn btn-xl">Email</a>
+                	</li>
+                	<li>
+                		<a href="http://www.linkedin.com/pub/marina-sharifi/6a/315/1a0" class="btn btn-xl">LinkedIn</a>
+                	</li>
+            	</ul>
+            </div>
+        </div>
+    </section>
+
+     <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <span class="copyright">&copy; Marina Sharifi 2015</span>
+                </div>
+                <div class="col-md-4">
+                    <span class="copyright">Site last updated 2 January 2015</span>
+                </div>
+                <div class="col-md-4">
+                    <span class="copyright">Powered by <a href="http://getbootstrap.com/">Bootstrap</a></span>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="js/classie.js"></script>
+    <script src="js/cbpAnimatedHeader.js"></script>
+
+    <!-- Contact Form JavaScript -->
+    <script src="js/jqBootstrapValidation.js"></script>
+    <script src="js/contact_me.js"></script>
+
+    <!-- Custom Theme JavaScript -->
+    <script src="js/agency.js"></script>
+
+</body>
+
+</html>
