--- a/index.html
+++ b/index.html
@@ -250,6 +250,22 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="js/agency.js"></script>
+	
+	<!-- Statcounter-->
+	<script type="text/javascript">
+	var sc_project=10214175; 
+	var sc_invisible=1; 
+	var sc_security="adf48fe3"; 
+	var scJsHost = (("https:" == document.location.protocol) ?
+	"https://secure." : "http://www.");
+	document.write("<sc"+"ript type='text/javascript' src='" +
+	scJsHost+
+	"statcounter.com/counter/counter.js'></"+"script>");
+	</script>
+	<noscript>
+		<div class="statcounter"><a title="shopify analytics tool" href="http://statcounter.com/shopify/" target="_blank"><img class="statcounter" src="http://c.statcounter.com/10214175/0/adf48fe3/1/"alt="shopify analytics tool"></a>
+		</div>
+	</noscript>
 
 </body>
 
