shrink header image and fix margin formatting for text columns on mobile view

--- a/index.html
+++ b/index.html
@@ -126,34 +126,21 @@
             <div class="row">
             	<div class="col-sm-5 text-center">
             		<h4 class="section-sub-heading">About</h4>
-            		<p>I did my PhD research on the role of macro-autophagy in tumor cell metastasis. Macro-autophagy is a catabolic process important for degradation of damaged organelles, protein aggregates and intracellular recycling of proteins and lipids. Autophagy is thought to suppress tumor initiation by promoting genome stability and limiting necrosis and inflammation, but conversely is utilized by tumor cells to survive nutrient stress, hypoxia, and cytotoxic therapies, promoting growth of established tumors. However, whether autophagy impacts the metastatic process is not well understood, and my research has focused on investigating whether inhibition of autophagy affects the invasiveness, motility, and survival of metastatic tumor cells, as well as their metastatic potential <i>in vivo</i> in a mouse model of breast cancer.</p>
+        			<p class="stackedbox">I did my PhD research on the role of macro-autophagy in tumor cell metastasis. Macro-autophagy is a catabolic process important for degradation of damaged organelles, protein aggregates and intracellular recycling of proteins and lipids. Autophagy is thought to suppress tumor initiation by promoting genome stability and limiting necrosis and inflammation, but conversely is utilized by tumor cells to survive nutrient stress, hypoxia, and cytotoxic therapies, promoting growth of established tumors. However, whether autophagy impacts the metastatic process is not well understood, and my research has focused on investigating whether inhibition of autophagy affects the invasiveness, motility, and survival of metastatic tumor cells, as well as their metastatic potential <i>in vivo</i> in a mouse model of breast cancer.</p>
             	</div>
-            	<div class="col-sm-7 text-center">
+            	<div class="col-sm-1"></div>
+            	<div class="col-sm-6 text-center">
             		<h4 class="section-sub-heading">Selected Conference Presentations</h4>
-            		<div class="publications">
-                	<ul>
-                		<li>
-                			<p>American Association for Cancer Research Annual Meeting San Diego, CA, April 2014: Poster (AACR Scholar-in-Training award recipient). 
-                			</p>	
-                		</li>
-                		<li>
-                			<p>Cancer Biology Training Consortium Annual Meeting, Wilmington, NC, October 2013: Talk.
-                			</p>	
-                		</li>
-                		<li>
-                			<p>Keystone Symposium on Tumor Metabolism, Keystone, CO, February 2013: Poster.
-                			</p>	
-                		</li>
-                		<li>
-                			<p>American Physician Scientist Association/American Society for Clinical Investigation Annual Meeting, Chicago, IL, April 2012: Poster.
-                			</p>
-            			</li>
-            			<li>
-                			<p>Keystone Symposium on Autophagy, Whistler, B.C., March 2011: Poster.
-                			</p>
-            			</li>
-                	</ul>	 
-                </div>
+        			<p>American Association for Cancer Research Annual Meeting San Diego, CA, April 2014: Poster (AACR Scholar-in-Training award recipient). 
+        			</p>	
+        			<p>Cancer Biology Training Consortium Annual Meeting, Wilmington, NC, October 2013: Talk.
+        			</p>	
+        			<p>Keystone Symposium on Tumor Metabolism, Keystone, CO, February 2013: Poster.
+        			</p>	
+        			<p>American Physician Scientist Association/American Society for Clinical Investigation Annual Meeting, Chicago, IL, April 2012: Poster.
+        			</p>
+        			<p>Keystone Symposium on Autophagy, Whistler, B.C., March 2011: Poster.
+        			</p> 
             	</div>
             </div>
         </div>
@@ -165,25 +152,19 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Publications</h2>
-                    <h3 class="section-subheading text-muted">Direct links below, or via <a href="http://www.ncbi.nlm.nih.gov/pubmed/?term=marina+n+sharifi">Pubmed</a></h3>
+                    <h3 class="section-subheading text-muted">Via <a href="http://www.ncbi.nlm.nih.gov/pubmed/?term=marina+n+sharifi">Pubmed</a>, or direct links below</h3>
                 </div>
             </div>
             <div class="row">
-                <div class="publications">
-                	<ul>
-                		<li>
-                			<p>
-                				<strong>p62/SQSTM1 Accumulation in Squamous Cell Carcinoma Of Head And Neck Predicts Sensitivity to Phosphatidylinositol 3-Kinase Pathway Inhibitors. </strong> Kuo, W., <em>Sharifi, M. N.</em>, Lingen, M., Karrison, T., Nagilla, M., Macleod, K. F. and Cohen, Ezra. PLoS One. 2014 Mar 5;9(3):e90171.
-                				<span class="label label-primary"><a href="http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0090171">Link</a>
-                			</p>	
-                		</li>
-                		<li>
-                			<p>
-                				<strong>Intragenic enhancers and suppressors of phytoene desaturase mutations in Chlamydomonas reinhardtii.</strong> Tran, P. T., <em>Sharifi, M. N.,</em> Poddar, S., Dent, R. M., and Niyogi, K.K.  PLoS One. 2012; Aug 7(8):e42196.
-                				<span class="label label-primary"><a href="http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0042196">Link</a>
-                			</p>	
-                		</li>
-                	</ul>	 
+                <div class="col-lg-12 text-left">
+        			<p>
+        				<strong>p62/SQSTM1 Accumulation in Squamous Cell Carcinoma Of Head And Neck Predicts Sensitivity to Phosphatidylinositol 3-Kinase Pathway Inhibitors. </strong> Kuo, W., <em>Sharifi, M. N.</em>, Lingen, M., Karrison, T., Nagilla, M., Macleod, K. F. and Cohen, Ezra. PLoS One. 2014 Mar 5;9(3):e90171.
+        				<span class="label label-primary"><a href="http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0090171">Link</a>
+        			</p>
+        			<p>
+        				<strong>Intragenic enhancers and suppressors of phytoene desaturase mutations in Chlamydomonas reinhardtii.</strong> Tran, P. T., <em>Sharifi, M. N.,</em> Poddar, S., Dent, R. M., and Niyogi, K.K.  PLoS One. 2012; Aug 7(8):e42196.
+        				<span class="label label-primary"><a href="http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0042196">Link</a>
+        			</p>		 
                 </div>
             </div>
         </div>
