update pub list

--- a/index.html
+++ b/index.html
@@ -157,8 +157,12 @@
             </div>
             <div class="row">
                 <div class="col-lg-12 text-left">
+                	<p>
+                		<strong>Large-scale insertional mutagenesis of Chlamydomonas supports phylogenomic functional prediction of photosynthetic genes and analysis of classical acetate-requiring mutants. </strong> Dent, R. M., <em> Sharifi, M.N.</em>, Malnoë, A., Haglund, C., Calderon, R.H., Wakao, S., and Niyogi, K.K. Plant J. 2015 Feb 25. [Epub ahead of print]
+                		<span class="label label-primary"><a href="http://onlinelibrary.wiley.com/doi/10.1111/tpj.12806/abstract">Link</a>
+                	</p>	
         			<p>
-        				<strong>p62/SQSTM1 Accumulation in Squamous Cell Carcinoma Of Head And Neck Predicts Sensitivity to Phosphatidylinositol 3-Kinase Pathway Inhibitors. </strong> Kuo, W., <em>Sharifi, M. N.</em>, Lingen, M., Karrison, T., Nagilla, M., Macleod, K. F. and Cohen, Ezra. PLoS One. 2014 Mar 5;9(3):e90171.
+        				<strong>p62/SQSTM1 Accumulation in Squamous Cell Carcinoma Of Head And Neck Predicts Sensitivity to Phosphatidylinositol 3-Kinase Pathway Inhibitors. </strong> Kuo, W., <em>Sharifi, M. N.</em>, Lingen, M., Karrison, T., Nagilla, M., Macleod, K. F. and Cohen, E. PLoS One. 2014 Mar 5;9(3):e90171.
         				<span class="label label-primary"><a href="http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0090171">Link</a>
         			</p>
         			<p>
@@ -209,7 +213,7 @@
                     <span class="copyright">&copy; Marina Sharifi 2015</span>
                 </div>
                 <div class="col-md-4">
-                    <span class="copyright">Site last updated 2 January 2015</span>
+                    <span class="copyright">Site last updated 21 March 2015</span>
                 </div>
                 <div class="col-md-4">
                     <span class="copyright">Powered by <a href="http://getbootstrap.com/">Bootstrap</a></span>
