update pubs and cv

--- a/index.html
+++ b/index.html
@@ -131,15 +131,15 @@
             	<div class="col-sm-1"></div>
             	<div class="col-sm-6 text-center">
             		<h4 class="section-sub-heading">Selected Conference Presentations</h4>
-        			<p>American Association for Cancer Research Annual Meeting San Diego, CA, April 2014: Poster (AACR Scholar-in-Training award recipient). 
+        			<p>American Association for Cancer Research Annual Meeting San Diego, CA, April 2014: Poster presentation (AACR Scholar-in-Training award recipient). 
         			</p>	
-        			<p>Cancer Biology Training Consortium Annual Meeting, Wilmington, NC, October 2013: Talk.
+        			<p>Cancer Biology Training Consortium Annual Meeting, Wilmington, NC, October 2013: Oral presentation.
         			</p>	
-        			<p>Keystone Symposium on Tumor Metabolism, Keystone, CO, February 2013: Poster.
+        			<p>Keystone Symposium on Tumor Metabolism, Keystone, CO, February 2013: Poster presentation.
         			</p>	
-        			<p>American Physician Scientist Association/American Society for Clinical Investigation Annual Meeting, Chicago, IL, April 2012: Poster.
+        			<p>American Physician Scientist Association/American Society for Clinical Investigation Annual Meeting, Chicago, IL, April 2012: Poster presentation.
         			</p>
-        			<p>Keystone Symposium on Autophagy, Whistler, B.C., March 2011: Poster.
+        			<p>Keystone Symposium on Autophagy, Whistler, B.C., March 2011: Poster presentation.
         			</p> 
             	</div>
             </div>
@@ -156,18 +156,21 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12 text-left">
+                <div class="col-lg-12 text-left">	
                 	<p>
-                		<strong>Large-scale insertional mutagenesis of Chlamydomonas supports phylogenomic functional prediction of photosynthetic genes and analysis of classical acetate-requiring mutants. </strong> Dent, R. M., <em> Sharifi, M.N.</em>, Malnoë, A., Haglund, C., Calderon, R.H., Wakao, S., and Niyogi, K.K. Plant J. 2015 Feb 25. [Epub ahead of print]
-                		<span class="label label-primary"><a href="http://onlinelibrary.wiley.com/doi/10.1111/tpj.12806/abstract">Link</a>
-                	</p>	
+                		<strong>Measuring autophagy in stressed cells. </strong> <em>Sharifi, M. N.</em>, Mowers, E. E., Drake, L. E., Macleod, K. F. Methods Mol Biol. 2015;1292:129-50.
+        				<span class="label label-primary"><a href="http://link.springer.com/protocol/10.1007%2F978-1-4939-2522-3_10" target="_blank">Link</a>
         			<p>
         				<strong>p62/SQSTM1 Accumulation in Squamous Cell Carcinoma Of Head And Neck Predicts Sensitivity to Phosphatidylinositol 3-Kinase Pathway Inhibitors. </strong> Kuo, W., <em>Sharifi, M. N.</em>, Lingen, M., Karrison, T., Nagilla, M., Macleod, K. F. and Cohen, E. PLoS One. 2014 Mar 5;9(3):e90171.
-        				<span class="label label-primary"><a href="http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0090171">Link</a>
+        				<span class="label label-primary"><a href="http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0090171" target="_blank">Link</a>
         			</p>
         			<p>
+                		<strong>Large-scale insertional mutagenesis of Chlamydomonas supports phylogenomic functional prediction of photosynthetic genes and analysis of classical acetate-requiring mutants. </strong> Dent, R. M., <em> Sharifi, M.N.</em>, Malnoë, A., Haglund, C., Calderon, R.H., Wakao, S., and Niyogi, K.K. Plant J. 2015 Feb 25. [Epub ahead of print]
+                		<span class="label label-primary"><a href="http://onlinelibrary.wiley.com/doi/10.1111/tpj.12806/abstract" target="_blank">Link</a>
+                	</p>
+        			<p>
         				<strong>Intragenic enhancers and suppressors of phytoene desaturase mutations in Chlamydomonas reinhardtii.</strong> Tran, P. T., <em>Sharifi, M. N.,</em> Poddar, S., Dent, R. M., and Niyogi, K.K.  PLoS One. 2012; Aug 7(8):e42196.
-        				<span class="label label-primary"><a href="http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0042196">Link</a>
+        				<span class="label label-primary"><a href="http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0042196" target="_blank">Link</a>
         			</p>		 
                 </div>
             </div>
