--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <div class="row">
                 <div class="col-lg-12 text-left">	
                 	<p>
-                		<em>Sharifi MN</em>, Mowers EE, Drake LE, Zamora M, Chen H, Collier C, Mui S and Macleod KF. <strong>Autophagy promotes focal adhesion disassembly and cell motility of metastatic tumor cells through the direct interaction of paxillin with LC3.</strong> <i>Under revision, Cell Reports</i>.
+                		<em>Sharifi MN</em>, Mowers EE, Collier CD, Drake LE, Cheng H, Zamora M, Chen H, Mui S and Macleod KF. <strong>Autophagy promotes focal adhesion disassembly and cell motility of metastatic tumor cells through the direct interaction of paxillin with LC3.</strong> <i>In press, Cell Reports</i>.
         			<p>
                 	<p>
                 		Chourasia AH, Tracy K, Frankenberger C, Boland ML, <em>Sharifi MN</em>, Drake LE, Sachleben JR, Asara JM, Locasale JW, Karczmar GS, Macleod KF. <strong>Mitophagy defects arising from BNip3 loss promote mammary tumor progression to metastasis. </strong> EMBO Rep. 2015 Jul 31. pii: e201540759. [Epub ahead of print] PMID: 26232272.
@@ -210,7 +210,7 @@
                     <h3 class="section-subheading text-muted">Please feel free to contact me via the links below</h3>
                 <ul class="list-inline">
                 	<li>
-                		<a href="mailto:mnsharif@uchicago.edu" class="btn btn-xl">Email</a>
+                		<a href="mailto:sharifi.marina@gmail.com" class="btn btn-xl">Email</a>
                 	</li>
                 	<li>
                 		<a href="http://www.linkedin.com/pub/marina-sharifi/6a/315/1a0" class="btn btn-xl">LinkedIn</a>
@@ -227,7 +227,7 @@
                     <span class="copyright">&copy; Marina Sharifi 2016</span>
                 </div>
                 <div class="col-md-4">
-                    <span class="copyright">Site last updated 1 March 2016</span>
+                    <span class="copyright">Site last updated 16 April 2016</span>
                 </div>
                 <div class="col-md-4">
                     <span class="copyright">Powered by <a href="http://getbootstrap.com/">Bootstrap</a></span>
