--- a/index.html
+++ b/index.html
@@ -152,13 +152,14 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Publications</h2>
-                    <h3 class="section-subheading text-muted">Via <a href="http://www.ncbi.nlm.nih.gov/pubmed/?term=marina+n+sharifi">Pubmed</a>, or direct links below</h3>
+                    <h3 class="section-subheading text-muted">Via <a href="http://www.ncbi.nlm.nih.gov/pubmed/?term=marina+n+sharifi" target="_blank">Pubmed</a>, or direct links below</h3>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12 text-left">	
                 	<p>
-                		<em>Sharifi MN</em>, Mowers EE, Collier CD, Drake LE, Cheng H, Zamora M, Chen H, Mui S and Macleod KF. <strong>Autophagy promotes focal adhesion disassembly and cell motility of metastatic tumor cells through the direct interaction of paxillin with LC3.</strong> <i>In press, Cell Reports</i>.
+                		<em>Sharifi MN</em>, Mowers EE, Drake LE, Collier CD, Chen H, Zamora M, Mui S and Macleod KF. <strong>Autophagy promotes focal adhesion disassembly and cell motility of metastatic tumor cells through the direct interaction of paxillin with LC3.</strong> <i>In press, Cell Reports</i>.
+                        <span class="label label-primary"><a href="http://www.cell.com/cell-reports/fulltext/S2211-1247%2816%2930509-5" target="_blank">Link</a>
         			<p>
                 	<p>
                 		Chourasia AH, Tracy K, Frankenberger C, Boland ML, <em>Sharifi MN</em>, Drake LE, Sachleben JR, Asara JM, Locasale JW, Karczmar GS, Macleod KF. <strong>Mitophagy defects arising from BNip3 loss promote mammary tumor progression to metastasis. </strong> EMBO Rep. 2015 Jul 31. pii: e201540759. [Epub ahead of print] PMID: 26232272.
@@ -227,7 +228,7 @@
                     <span class="copyright">&copy; Marina Sharifi 2016</span>
                 </div>
                 <div class="col-md-4">
-                    <span class="copyright">Site last updated 16 April 2016</span>
+                    <span class="copyright">Site last updated 13 May 2016</span>
                 </div>
                 <div class="col-md-4">
                     <span class="copyright">Powered by <a href="http://getbootstrap.com/">Bootstrap</a></span>
