--- a/index.html
+++ b/index.html
@@ -160,7 +160,11 @@
                 <div class="col-lg-12 text-left">	
                 <h4 class="section-heading">Macleod Lab - PhD Research</h4>
                 	<p>
-                		Mowers EE, <em>Sharifi MN</em>, Macleod KF. <strong>Autophagy in cancer metastasis. </strong>Oncogene. 2016 Sept 5 (advance online publication). doi: 10.1038/onc.2016.333.
+                		Mowers EE, <em>Sharifi MN</em>, Macleod KF. <strong>Functions of autophagy in the tumor microenvironment and cancer metastasis. </strong>FEBS J. 2018 Jan 21. doi:10.1111/febs.14388. [Epub ahead of print]. PMID: 29356327.
+                        <span class="label label-primary"><a href="https://febs.onlinelibrary.wiley.com/doi/abs/10.1111/febs.14388" target="_blank">Link</a>
+        			<p>
+                	<p>
+                		Mowers EE, <em>Sharifi MN</em>, Macleod KF. <strong>Autophagy in cancer metastasis. </strong>Oncogene. 2017 Mar 23;36(12):1619-1630. PMID: 27593926.
                         <span class="label label-primary"><a href="http://www.nature.com/onc/journal/v36/n12/full/onc2016333a.html" target="_blank">Link</a>
         			<p>
         			<p>
@@ -241,10 +245,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">&copy; Marina Sharifi 2017</span>
+                    <span class="copyright">&copy; Marina Sharifi 2018</span>
                 </div>
                 <div class="col-md-4">
-                    <span class="copyright">Site last updated 4 May 2017</span>
+                    <span class="copyright">Site last updated 30 April 2018</span>
                 </div>
                 <div class="col-md-4">
                     <span class="copyright">Powered by <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a></span> (<a href="https://startbootstrap.com/template-overviews/agency/" target="_blank">Site design</a>)
