--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     </div>
                 </div>
                 <div class="col-md-8">
-                	<p class="text-muted">I am currently doing my residency in Internal Medicine at the <a href="https://www.medicine.wisc.edu/housestaff/hsmain" target="_blank">University of Wisconsin, Madison</a>. I'm in the <a href="https://www.medicine.wisc.edu/housestaff/researchpathwaymain" target="_blank">ABIM research pathway</a> with plans to pursue a hematology/oncology fellowship after residency.
+                	<p class="text-muted">I am currently completing a fellowship in Medical Oncology at the <a href="https://www.medicine.wisc.edu/hemonc/hematology-oncology-fellowship-program" target="_blank">University of Wisconsin, Madison</a>. I'm in the <a href="https://www.medicine.wisc.edu/housestaff/researchpathwaymain" target="_blank">ABIM research pathway</a> which gives me the opportunity for additional dedicated research time during my fellowship.
                     </p>
                     <p class="text-muted">I completed my MD/PhD in June 2016 at the <a href="https://pritzker.uchicago.edu/jointdegrees/mstp/" target="_blank">University of Chicago MSTP program</a>. I did my graduate work in the <a href="http://benmay.uchicago.edu/faculty/macleod" target="_blank">Macleod Lab</a> in the <a href="https://biomedsciences.uchicago.edu/page/cancer-biology">Committee on Cancer Biology</a> and <a href="http://benmay.uchicago.edu/">Ben May Department of Cancer Research</a>, studying the role of autophagy in metastasis.
                     </p>
@@ -245,10 +245,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">&copy; Marina Sharifi 2018</span>
+                    <span class="copyright">&copy; Marina Sharifi 2019</span>
                 </div>
                 <div class="col-md-4">
-                    <span class="copyright">Site last updated 30 April 2018</span>
+                    <span class="copyright">Site last updated 17 August 2019</span>
                 </div>
                 <div class="col-md-4">
                     <span class="copyright">Powered by <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a></span> (<a href="https://startbootstrap.com/template-overviews/agency/" target="_blank">Site design</a>)
