--- a/index.html
+++ b/index.html
@@ -56,14 +56,8 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                     <li>
-                        <a class="page-scroll" href="#page-top">Home</a>
-                    </li>
                     <li>
                         <a class="page-scroll" href="#bio">Bio</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#research">Research</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#publications">Publications</a>
@@ -81,18 +75,6 @@
         <!-- /.container-fluid -->
     </nav>
 
-    <!-- Header -->
-    <header>
-        <div class="container">
-            <div class="intro-text">
-                <div class="intro-heading">Marina N. Sharifi
-                </div>
-                <a href="#bio" class="btn btn-circle page-scroll"><i class="fa fa-angle-double-down animated"></i>
-                </a>
-            </div>
-        </div>
-    </header>
-
     <!-- Bio Section -->
     <section id="bio">
         <div class="container">
@@ -103,46 +85,13 @@
                     </div>
                 </div>
                 <div class="col-md-8">
-                	<p class="text-muted">I am currently completing a fellowship in Medical Oncology at the <a href="https://www.medicine.wisc.edu/hemonc/hematology-oncology-fellowship-program" target="_blank">University of Wisconsin, Madison</a>. I'm in the <a href="https://www.medicine.wisc.edu/housestaff/researchpathwaymain" target="_blank">ABIM research pathway</a> which gives me the opportunity for additional dedicated research time during my fellowship.
+                	<p class="text-muted">I am currently completing a fellowship in Medical Oncology at the <a href="https://www.medicine.wisc.edu/hemonc/hematology-oncology-fellowship-program" target="_blank">University of Wisconsin, Madison</a>. I'm in the <a href="https://www.medicine.wisc.edu/housestaff/researchpathwaymain" target="_blank">ABIM research pathway</a> which gives me the opportunity for additional dedicated research time during my fellowship. In my post-doctoral research I am working on the development of novel liquid biopsy biomarkers for targeted therapies, with a current focus on PI3K pathway inhibition in breast and prostate cancer, in Joshua Lang's lab in the Department of Medicine at UW Madison.
                     </p>
                     <p class="text-muted">I completed my MD/PhD in June 2016 at the <a href="https://pritzker.uchicago.edu/jointdegrees/mstp/" target="_blank">University of Chicago MSTP program</a>. I did my graduate work in the <a href="http://benmay.uchicago.edu/faculty/macleod" target="_blank">Macleod Lab</a> in the <a href="https://biomedsciences.uchicago.edu/page/cancer-biology">Committee on Cancer Biology</a> and <a href="http://benmay.uchicago.edu/">Ben May Department of Cancer Research</a>, studying the role of autophagy in metastasis.
                     </p>
-                    <p class="text-muted">I graduated from the <a href="http://www.berkeley.edu">University of California, Berkeley</a> in 2006 with BA degrees in Molecular and Cell Biology and German Literature. From 2006 to 2008 I worked as a technician and lab manager in the <a href="http://niyogilab.berkeley.edu/frontpage">Niyogi Lab</a> in the <a href="http://pmb.berkeley.edu/">Department of Plant and Microbial Biology</a> at UC Berkeley.
+                    <p class="text-muted">I graduated from the <a href="http://www.berkeley.edu">University of California, Berkeley</a> in 2006 with BA degrees in Molecular and Cell Biology and German Literature. From 2006 to 2008 I worked as a research technician and lab manager in the <a href="http://niyogilab.berkeley.edu/frontpage">Niyogi Lab</a> in the <a href="http://pmb.berkeley.edu/">Department of Plant and Microbial Biology</a> at UC Berkeley.
                     </p>
                 </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Research Section -->
-    <section id="research" class="bg-light-gray">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Research</h2>
-                    <h3 class="section-subheading text-muted">Past and Present</h3>
-                </div>
-            </div>
-            <div class="row">
-            	<div class="col-sm-5 text-center">
-            		<h4 class="section-sub-heading">PhD Research</h4>
-            		<h5 class="section-sub-heading text-muted"> Autophagy and tumor cell metastasis</h5>
-        			<p class="stackedbox">Macro-autophagy is a catabolic process important for degradation of damaged organelles, protein aggregates and intracellular recycling of proteins and lipids to help keep cells healthy. It is co-opted by tumor cells to promote survival during nutrient stress, hypoxia, and exposure to cytotoxic therapy within the primary tumor, but whether autophagy impacts the metastatic process is less well understood. My research focused on investigating whether inhibition of autophagy affected the survival and metastatic potential of metastatic tumor cells, primarily in a mouse model of aggressive breast cancer. I found that not only does inhibition of autophagy inhibit metastatic behavior <i>in vitro</i> and metastasis <i>in vivo</i>, it does so through a novel direct function in tumor cell migration. Read more <a href="http://www.cell.com/cell-reports/fulltext/S2211-1247%2816%2930509-5" target="_blank">here</a>.</p>
-            	</div>
-            	<div class="col-sm-1"></div>
-            	<div class="col-sm-6 text-center">
-            		<h4 class="section-sub-heading">Selected Conference Presentations</h4>
-        			<p>American Association for Cancer Research Annual Meeting San Diego, CA, April 2014: Poster presentation (AACR Scholar-in-Training award recipient). 
-        			</p>	
-        			<p>Cancer Biology Training Consortium Annual Meeting, Wilmington, NC, October 2013: Oral presentation.
-        			</p>	
-        			<p>Keystone Symposium on Tumor Metabolism, Keystone, CO, February 2013: Poster presentation.
-        			</p>	
-        			<p>American Physician Scientist Association/American Society for Clinical Investigation Annual Meeting, Chicago, IL, April 2012: Poster presentation.
-        			</p>
-        			<p>Keystone Symposium on Autophagy, Whistler, B.C., March 2011: Poster presentation.
-        			</p> 
-            	</div>
             </div>
         </div>
     </section>
@@ -153,11 +102,24 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Publications</h2>
-                    <h3 class="section-subheading text-muted">Via <a href="http://www.ncbi.nlm.nih.gov/pubmed/?term=marina+n+sharifi" target="_blank">Pubmed</a>, or direct links below</h3>
+                    <h3 class="section-subheading text-muted">Via <a href="https://www.ncbi.nlm.nih.gov/myncbi/marina.sharifi.1/bibliography/public/" target="_blank">Pubmed</a>, or direct links below</h3>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12 text-left">	
+                <div class="col-lg-12 text-left">
+                  <h4 class="section-heading">Fellowship</h4>
+                    <p><em>Sharifi M</em>, Wisinski KB. <strong>Advances in the Treatment of Early-Stage HER2-Positive Breast Cancer.</strong> Clin Adv Hematol Oncol. 2020 Aug;18(8):482-492. PMID: 32903247 
+                        <span class="label label-primary"><a href="https://www.hematologyandoncology.net/archives/august-2020/advances-in-the-treatment-of-early-stage-her2-positive-breast-cancer/" target="_blank">Link</a>
+                    <p>
+                    <p>
+                        Anandan A, <em>Sharifi M</em>, O'Regan R. <strong>Molecular Assays to Determine Optimal Duration of Adjuvant Endocrine Therapy in Breast Cancer.</strong> Curr Treat Options Oncol. 2020 Aug 15;21(10):84. doi: 10.1007/s11864-020-00788-y. PMID: 32803324
+                        <span class="label label-primary"><a href="https://link.springer.com/article/10.1007/s11864-020-00788-y" target="_blank">Link</a>
+                    <p>
+                    <p>
+                        <em>Sharifi MN</em>, Anandan A, Grogan P, O'Regan RM. <strong>Therapy after cyclin-dependent kinase inhibition in metastatic hormone receptor-positive breast cancer: Resistance mechanisms and novel treatment strategies. </strong> Cancer. 2020 Aug 1;126(15):3400-3416. doi: 10.1002/cncr.32931. Epub 2020 May 19. Review. PubMed PMID: 32426848. 
+                        <span class="label label-primary"><a href="https://acsjournals.onlinelibrary.wiley.com/doi/abs/10.1002/cncr.32931" target="_blank">Link</a>
+                    <p>
+                    <br>    
                 <h4 class="section-heading">Macleod Lab - PhD Research</h4>
                 	<p>
                 		Mowers EE, <em>Sharifi MN</em>, Macleod KF. <strong>Functions of autophagy in the tumor microenvironment and cancer metastasis. </strong>FEBS J. 2018 Jan 21. doi:10.1111/febs.14388. [Epub ahead of print]. PMID: 29356327.
