--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
             <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container-fluid -->
+        <!-- /.container-fluid -->  
     </nav>
 
     <!-- Bio Section -->
@@ -81,13 +81,13 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img class="img-reponsive img-circle" alt="" src="img/headshot.jpg"></img>
+                        <img class="img-reponsive img-circle" alt="" src="img/headshot.png"></img>
                     </div>
                 </div>
                 <div class="col-md-8">
                 	<p class="text-muted">I am currently completing a fellowship in Medical Oncology at the <a href="https://www.medicine.wisc.edu/hemonc/hematology-oncology-fellowship-program" target="_blank">University of Wisconsin, Madison</a>. I'm in the <a href="https://www.medicine.wisc.edu/housestaff/researchpathwaymain" target="_blank">ABIM research pathway</a> which gives me the opportunity for additional dedicated research time during my fellowship. In my post-doctoral research I am working on the development of novel liquid biopsy biomarkers for targeted therapies, with a current focus on PI3K pathway inhibition in breast and prostate cancer, in Joshua Lang's lab in the Department of Medicine at UW Madison.
                     </p>
-                    <p class="text-muted">I completed my MD/PhD in June 2016 at the <a href="https://pritzker.uchicago.edu/jointdegrees/mstp/" target="_blank">University of Chicago MSTP program</a>. I did my graduate work in the <a href="http://benmay.uchicago.edu/faculty/macleod" target="_blank">Macleod Lab</a> in the <a href="https://biomedsciences.uchicago.edu/page/cancer-biology">Committee on Cancer Biology</a> and <a href="http://benmay.uchicago.edu/">Ben May Department of Cancer Research</a>, studying the role of autophagy in metastasis.
+                    <p class="text-muted">Before coming to Madison, I completed my MD/PhD in June 2016 at the <a href="https://pritzker.uchicago.edu/jointdegrees/mstp/" target="_blank">University of Chicago MSTP program</a>. I did my graduate work in the <a href="http://benmay.uchicago.edu/faculty/macleod" target="_blank">Macleod Lab</a> in the <a href="https://biomedsciences.uchicago.edu/page/cancer-biology">Committee on Cancer Biology</a> and <a href="http://benmay.uchicago.edu/">Ben May Department of Cancer Research</a>, studying the role of autophagy in metastasis.
                     </p>
                     <p class="text-muted">I graduated from the <a href="http://www.berkeley.edu">University of California, Berkeley</a> in 2006 with BA degrees in Molecular and Cell Biology and German Literature. From 2006 to 2008 I worked as a research technician and lab manager in the <a href="http://niyogilab.berkeley.edu/frontpage">Niyogi Lab</a> in the <a href="http://pmb.berkeley.edu/">Department of Plant and Microbial Biology</a> at UC Berkeley.
                     </p>
@@ -102,7 +102,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Publications</h2>
-                    <h3 class="section-subheading text-muted">Via <a href="https://www.ncbi.nlm.nih.gov/myncbi/marina.sharifi.1/bibliography/public/" target="_blank">Pubmed</a>, or direct links below</h3>
+                    <h3 class="section-subheading text-muted">Find me on <a href="https://www.ncbi.nlm.nih.gov/myncbi/marina.sharifi.1/bibliography/public/" target="_blank">Pubmed</a> or <a href="https://scholar.google.com/citations?user=hKNDau4AAAAJ&hl=en" target="_blank">Google scholar</a></h3>
                 </div>
             </div>
             <div class="row">
@@ -193,7 +193,7 @@
                     <h3 class="section-subheading text-muted">Please feel free to <a href="mailto:sharifi.marina@gmail.com" target="_blank">email</a> me or connect via the links below:</h3>
                 <ul class="list-inline">
                 	<li>
-                		<a href="https://wisc.academia.edu/MarinaSharifi" target="_blank" class="btn btn-xl">Academia.edu</a>
+                		<a href="https://twitter.com/marina_sharifi/" target="_blank" class="btn btn-xl">Twitter</a>
                 	</li>
                 	<li>
                 		<a href="http://www.linkedin.com/pub/marina-sharifi/6a/315/1a0" target="_blank" class="btn btn-xl">LinkedIn</a>
@@ -207,10 +207,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">&copy; Marina Sharifi 2019</span>
+                    <span class="copyright">&copy; Marina Sharifi 2021</span>
                 </div>
                 <div class="col-md-4">
-                    <span class="copyright">Site last updated 17 August 2019</span>
+                    <span class="copyright">Site last updated 3 March 2021</span>
                 </div>
                 <div class="col-md-4">
                     <span class="copyright">Powered by <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a></span> (<a href="https://startbootstrap.com/template-overviews/agency/" target="_blank">Site design</a>)
